tests/pass/variable_2.crdm
fn main() {
    let test: int = 1;
    int += 1;
}