tests/fail/closure_1.crdm
fn main() {
    let increment: fn(&int) -> void = |x| void -> { x += 1; };

    increment(1.0);
}